Anotações sobre Matriz do S10